--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -1,29 +1,21 @@
 {
-  "env": {
-    "browser": true,
-    "es2021": true
-  },
-  "extends": [
-    "airbnb-base",
-    "prettier"
-  ],
-  "parser": "@typescript-eslint/parser",
-  "parserOptions": {
-    "ecmaVersion": "latest",
-    "sourceType": "module"
-  },
-  "plugins": [
-    "@typescript-eslint"
-  ],
-  "rules": {
-    "quotes": [
-      "error",
-      "double"
-    ],
-    "no-console": "off"
-    /*,
+   "env": {
+      "browser": true,
+      "es2021": true
+   },
+   "extends": ["airbnb-base", "prettier"],
+   "parser": "@typescript-eslint/parser",
+   "parserOptions": {
+      "ecmaVersion": "latest",
+      "sourceType": "module"
+   },
+   "plugins": ["@typescript-eslint"],
+   "rules": {
+      "quotes": ["error", "double"],
+      "no-console": "off"
+      /*,
     "import/no-unresolved": "off",
     "import/extensions": "off"
     */
-  }
+   }
 }
