--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -3,19 +3,16 @@
       "browser": true,
       "es2021": true
    },
-   "extends": ["airbnb-base", "prettier"],
+   "extends": ["airbnb-base", "airbnb-typescript/base", "prettier"],
    "parser": "@typescript-eslint/parser",
    "parserOptions": {
       "ecmaVersion": "latest",
-      "sourceType": "module"
+      "sourceType": "module",
+      "project": "./tsconfig.json"
    },
    "plugins": ["@typescript-eslint"],
    "rules": {
       "quotes": ["error", "double"],
       "no-console": "off"
-      /*,
-    "import/no-unresolved": "off",
-    "import/extensions": "off"
-    */
    }
 }
