--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,15 +1,16 @@
 {
-  "compilerOptions": {
-    "target": "ESNext",
-    "module": "CommonJS",
-    "sourceMap": true,
-    "outDir": "./dist",
-    "strict": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "allowJs": false,
-    "baseUrl": "."
-  },
-  "include": ["src/**/*"]
+   "compilerOptions": {
+      "target": "ESNext",
+      "module": "CommonJS",
+      "sourceMap": true,
+      "outDir": "./dist",
+      "strict": true,
+      "esModuleInterop": true,
+      "skipLibCheck": true,
+      "forceConsistentCasingInFileNames": true,
+      "allowJs": false,
+      "baseUrl": "."
+   },
+   "types": ["@cloudflare/workers-types", "@types/jest"],
+   "include": ["src/**/*"]
 }
