--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
    "scripts": {
       "lint": "eslint --ignore-path .gitignore 'src/**/*.{ts,tsx}'",
       "lint:fix": "eslint --ignore-path .gitignore 'src/**/*.{ts,tsx}' --fix",
-      "test": "jest",
+      "test": "jest --verbose",
       "format": "prettier --write src/**/*.{ts,tsx}",
       "dev": "wrangler dev",
       "publish": "wrangler publish"
@@ -18,6 +18,8 @@
       "@types/jest": "^29.0.0",
       "@typescript-eslint/eslint-plugin": "^5.30.6",
       "@typescript-eslint/parser": "^5.30.6",
+      "esbuild": "^0.15.7",
+      "esbuild-jest": "^0.5.0",
       "eslint": "^8.19.0",
       "eslint-config-airbnb": "^19.0.4",
       "eslint-config-airbnb-typescript": "^17.0.0",
