--- a/backend/wrangler.toml
+++ b/backend/wrangler.toml
@@ -1,10 +1,10 @@
-name = "hono-example-blog"
-main = "src/index.ts"
+name = "half-automation"
+main = "src/index.tsx"
 workers_dev = true
 
 compatibility_date = "2022-02-03"
 
 kv_namespaces = [
-  { binding = "BLOG_EXAMPLE", preview_id = "f49769f60ada41f69a564354a43ef13a", id = "a2ad3f2ca760467ab85c42932be29d42" }
+  { binding = "HALF_AUTOMATION", preview_id = "322c83a72d4e4d8fae4fd447e3d729ff", id = "40f67865d0b646c4a9cab0259dc1a2d5" }
 ]
 
