--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -1,4 +1,5 @@
 {
+   "root": true,
    "env": {
       "browser": true,
       "es2021": true
@@ -13,6 +14,6 @@
    "plugins": ["@typescript-eslint"],
    "rules": {
       "quotes": ["error", "double"],
-      "no-console": "off"
+      "import/extensions": "off"
    }
 }
