--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -5,6 +5,9 @@
       "jsxFragmentFactory": "Fragment",
       "target": "ESNext",
       "module": "CommonJS",
+      "jsx": "react",
+      "jsxFactory": "jsx",
+      "jsxFragmentFactory": "Fragment",
       "sourceMap": true,
       "outDir": "./dist",
       "strict": true,
