fix: timer put api

--- a/backend/wrangler.toml
+++ b/backend/wrangler.toml
@@ -5,6 +5,5 @@ workers_dev = true
 compatibility_date = "2022-02-03"
 
 kv_namespaces = [
-  { binding = "HALF_AUTOMATION", preview_id = "322c83a72d4e4d8fae4fd447e3d729ff", id = "40f67865d0b646c4a9cab0259dc1a2d5" }
+  { binding = "HALF_AUTOMATION", id = "40f67865d0b646c4a9cab0259dc1a2d5", preview_id = "322c83a72d4e4d8fae4fd447e3d729ff" },
 ]
-
